[gd_scene load_steps=8 format=2]

[ext_resource path="res://Themes/ButtonTheme.tres" type="Theme" id=1]
[ext_resource path="res://xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.952941, 0.941176, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id=2]
LineEdit/colors/cursor_color = Color( 0, 0.00784314, 0.129412, 1 )
LineEdit/colors/font_color = Color( 0, 0.00784314, 0.129412, 1 )
LineEdit/styles/normal = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
Label/colors/font_color = Color( 0.960784, 0, 0.470588, 1 )
Label/fonts/font = SubResource( 3 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="JoinButton" type="Button" parent="CanvasLayer"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
theme = ExtResource( 1 )
text = "Join"

[node name="HostButton" type="Button" parent="CanvasLayer"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 100.0
theme = ExtResource( 1 )
text = "Host"

[node name="UsernameInput" type="LineEdit" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -110.0
margin_right = 144.0
margin_bottom = -46.0
theme = SubResource( 2 )
align = 1
max_length = 12
placeholder_text = "Enter username"
placeholder_alpha = 0.75

[node name="Tween" type="Tween" parent="CanvasLayer/UsernameInput"]

[node name="Title" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -206.0
margin_right = 192.0
margin_bottom = -110.0
theme = SubResource( 4 )
text = "Quip Poker"
align = 1
valign = 1
uppercase = true

[connection signal="pressed" from="CanvasLayer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="tween_all_completed" from="CanvasLayer/UsernameInput/Tween" to="." method="_on_Tween_tween_all_completed"]
